# csaf

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  csaf.ABOUT  gen_fingerprints.sh  gen_licenses.py  gen_sbom.py  gen_version.py  indirect-package-names.yml  mkdocs.yml  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  setup.cfg  setup.py
csaf/: __init__.py  __main__.py  cli.py  config.py  csaf.py  cvss.py  definitions.py  document.py  env.py  product.py  vuln_types.py  vulnerability.py
csaf/mandatory/: README.md  acyclic_product_ids.py  consistent_product_status.py  defined_group_ids.py  defined_product_ids.py  rules.py  translator_and_source_lang.py  unique_group_ids.py  unique_product_ids.py  valid_category_name.py
csaf/schema_proxy/: csaf_2_0.json
docs/: SUMMARY.md  api.md  background.md  book.toml  changes.md  cli.md  index.md  install.md  quick.md  test-coverage.md  usage.md  use.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  indirect-package-names.yml  mkdocs.yml  monthly-downloads.json  packaging-facts.json  yearly-commits.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: conftest.py  test_cli.py  test_csaf.py  test_cvss.py  test_definitions.py  test_document.py  test_product.py  test_vulnerability.py
test/fixtures/example-com/: example-com-123.json
test/fixtures/user/: failed_is_valid_defined_product_ids.json
tests/: __init__.py  requirements-dev.txt  requirements.txt  test_cli.py
tests/fixtures/: minimal_whatever.json
tests/fixtures/user/: failed_is_valid_defined_product_ids.xml
