[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csaf"
version = "2023.11.27"
description = "Common Security Advisory Framework (CSAF) Verification, Validation, and Application Programming Interface (API)."
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "code-generation",
    "developer-tools",
    "validation",
    "verification",
]
dependencies = [
    "jmespath >= 1.0.1",
    "jsonschema >= 4.20.0",
    "langcodes >= 3.3.0",
    "lazr.uri >= 1.0.1",
    "msgspec >= 0.18.4",
    "pydantic >= 2.5.1",
    "referencing >= 0.31.0",
    "scooby >= 0.9.2",
    "setuptools >= 68.2.2",
    "typer >= 0.9.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "coverage", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "ruff"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/csaf"
Bug-Tracker = "https://todo.sr.ht/~sthagen/csaf"
Documentation = "https://codes.dilettant.life/docs/csaf"
Source-Code = "https://git.sr.ht/~sthagen/csaf"
Test-Coverage = "https://codes.dilettant.life/coverage/csaf"

[project.scripts]
csaf = "csaf.cli:app"

[tool.setuptools.packages.find]
include = [
  "csaf",
  "csaf.mandatory",
  "csaf.schema_proxy",
]
exclude = ["test*"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py39", "py310", "py311", "py312"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/__main__.py",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "Q"]
ignore = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"
unfixable = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"document.py" = ["E402"]

[tool.ruff.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.mccabe]
max-complexity = 42  # default is 10

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"
