[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Common Security Advisory Framework (CSAF) Verification, Validation, and Application Programming Interface (API).
home_page = https://github.com/sthagen/csaf

keywords =
    code-generation
    developer-tools
    validation
    verification

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = csaf

project_urls =
    Bug Tracker = https://github.com/sthagen/csaf/issues
    Documentation = https://sthagen.github.io/csaf
    Source Code = https://github.com/sthagen/csaf

url = https://github.com/sthagen/csaf
version = 2022.3.20


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.8
install_requires =
    jmespath >= 1.0.1
    jsonschema >= 4.17.3
    langcodes >= 3.7.2
    lazr.uri >= 1.0.1
    msgspec >= 0.11.0
    pydantic >= 1.10.2
    scooby >= 0.7.0
    setuptools >= 65.6.3
    typer >= 0.7.0

packages = find:

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    csaf = csaf.cli:app

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 42
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=csaf
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
